# templates

./: .envrc  .gitignore  Makefile  ci.mk  flake.nix
.github/workflows/: lint.yaml
course/: .cspell.yaml  .gitignore  flake.nix
course/.githooks/: pre-commit
course/.helix/: languages.toml
course/assessments/: rules.mk
course/nix/: flake.nix
empty/: Makefile  flake.nix
empty/nix/: flake.nix
go/: .gitattributes  .gitignore  flake.nix  go.mod
go/nix/: flake.nix
go118/: .gitignore  flake.nix
golang/: .gitattributes  .gitignore  flake.nix  go.mod
idris/: .gitignore  Makefile  changeme.ipkg  flake.nix
idris/nix/: flake.nix
idris/src/CHANGEME/: Main.idr
lean/: .gitignore  CHANGEME.lean  Main.lean  lake-manifest.json  lakefile.lean
lean/nix/: flake.nix
nix/: flake.nix
ocaml/: .gitignore  .ocamlformat  dune-project  flake.nix
ocaml/lib/: dune
ocaml/nix/: flake.nix
ocaml/test/: dune
python/: .gitignore  flake.nix  pyproject.toml
python/changeme/: main.py
python/nix/: flake.nix
rust/: .gitignore  flake.nix
rust-bin/: Cargo.toml  flake.nix
rust-lib/: flake.nix
rust/nix/: flake.nix
stats-course/: .Rprofile  .envrc  .gitignore  .pandoc-metadata.yaml  flake.nix  index.yaml
stats-course/.githooks/: pre-commit
stats-course/.helix/: languages.toml
tree-sitter/: .gitignore  Cargo.toml  binding.gyp  flake.nix  grammar.js  package.json
tree-sitter/.helix/: languages.toml
tree-sitter/nix/: flake.nix
tree-sitter/src/: grammar.json  parser.c
zig/: .gitignore  build.zig  build.zig.zon
zig/nix/: flake.nix
zig/src/: main.zig
(+3 files in other folders)
