[tool.poetry]
name = "CHANGEME"
version = "0.1.0"
description = ""
authors = ["Matthew Toohey <contact@mtoohey.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
CHANGEME = "changeme:main"
